                          WebAuth Change History

WebAuth 3.1.0 (in progress)

 *) when scrubbing tokens from r->args and r->parsed_uri.query, look
    for "?WEBAUTHR=" first then "WEBAUTHR=", since if there were no
    query args, the tokens could get parsed as query args. This
    caused tokens to show up as query args when we changed from ";WEBAUTHR="
    to "?WEBAUTHR=".

 *) if we are proxying a request, strip out all webauth_* cookies and
    and webauth tokens from Referer header. Also, if we are proxying
    or the URI passed to the server in the HTTP request has a scheme,
    use it as the return URL instead of constructing one relative to the
    server.

 *) Modify WebAuthKeytab and WebKdcKeytab directives so 
    you can optionally specify which principal to use with
    the specified keytab, instead of using the first principal found.
    This required modifying webauth_krb5_* APIs.
 
 *) implement WebAuthProxyHeaders directive. See WebAuth module
    documentation for more information.

 *) clean up header includes in tests and wa_keyring

 *) mod_{webauth,webkdc}.h - "module" declaration should be extern

 *) Remove the service token cache in mod_webauth on restarts.

 *) Restructured the mod_webauth code to define a pluggable credential
    interface, isolating all credential-related functions so that new
    credential types can easily be supported.

WebAuth 3.0.0 (2003-02-18)

 *) Initial public release.